--- a/themes/allegiant/config.toml
+++ b/themes/allegiant/config.toml
@@ -8,7 +8,7 @@ canonifyurls = true
     ga_api_key = "Your Google Analytics tracking id" # Google Analytics API key.
     avatar = "../../img/avatar.jpg" # Image should be square, and roughly 150px x 150px
     bio = "Insert your bio here. You should write something really whitty and interesting that nobody is ever going to read or care about. But such is life. I really like the look of having a bio snippet on the blog, though. You may have to adjust some CSS styles depending on how long or short your bio is. I didn't make it super resillient."
-    github = "http://github.com/username"
+    github = "http://github.com/contail"
     twitter = "https://twitter.com/username"
     linkedin = "https://www.linkedin.com/in/username"
     footer_1 = "Some text here."
