--- a/themes/allegiant/config.toml
+++ b/themes/allegiant/config.toml
@@ -7,7 +7,8 @@ canonifyurls = true
 [params]
     ga_api_key = "Your Google Analytics tracking id" # Google Analytics API key.
     avatar = "../../img/avatar.jpg" # Image should be square, and roughly 150px x 150px
-    bio = "Insert your bio here. You should write something really whitty and interesting that nobody is ever going to read or care about. But such is life. I really like the look of having a bio snippet on the blog, though. You may have to adjust some CSS styles depending on how long or short your bio is. I didn't make it super resillient."
+    bio = "최근들어 하고싶은게 많아진 개발자입니다. 아직은 초보이지만 언젠가는 고오급 개발자를
+	꿈꾸고 있습니다."
     github = "http://github.com/contail"
     twitter = "https://twitter.com/username"
     linkedin = "https://www.linkedin.com/in/username"
