--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://nervous-lichterman-b4af9e.netlify.com/"
+baseURL = "https://info-tech.netlify.com/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "allegiant"
