--- a/themes/allegiant/config.toml
+++ b/themes/allegiant/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://nervous-lichterman-b4af9e.netlify.com/"
+baseurl = "https://info-tech.netlify.com/"
 languageCode = "en-us"
 title = "Allegiant"
 copyright = "&copy; Allegiant. All Rights Reserved." # Copyright notice. This will be displayed in the footer.
