--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://info-tech.netlify.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "고오급 개발자가 되고 싶은 초보 블로그"
 theme = "allegiant"
